Getting started with CSS

--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio Website</title>
 </head>
+
 <body>
-    <h1>Leah's Portfolio Website</h1>
-    <p>Welcome to my first website! Here you can find info about my journey into Software Development, look at my current projects, and ask me about anything code!</p>
-    <div class="experience">
-        <h2>My journey so far</h2>
-        <ul>
-            <li>Got a philosophy degree from Durham University</li>
-            <li>Wrote Dissertation on connection between technology and free will</li>
-            <li>Gained interest in coding over lockdown, looking at python, HTML and CSS</li>
-            <li>Enrolled as a Software Developer Trainee at Northcoders</li>
-        </ul>
-    </div>
+    <h1 class="title">Leah's Portfolio Website</h1>
+    <nav>
+        <h2 class="navigate">Nagivate</h2>
+        <a href="index.html">Homepage</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact Me</a>
+        <a href="portfolio.html">Portfolio</a>
+    </nav>
+
+    <p>Welcome to my first website! Here you can find info about my journey into Software Development, look at my current projects, and ask me anything about my journey into tech!
+        I began coding at the start of lockdown as I wanted to try out a new hobby, and ended up really enjoying it! While it is possible to self-learn programming languages, 
+        I knew that I would study best following a course, and Northcoders seemed perfect! Here is my first attempt at HTML and CSS to build a website! Enjoy!
+    </p>
+    <img src="website-images/code.jpg" alt="Code Rocks!" width="300" height="175">
 </body>
 </html>
