fixed link to projects and added basic css to all pages

--- a/pages/nc-news.html
+++ b/pages/nc-news.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="../index.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>News App Project</title>
   </head>
   <body>
+    <div class="nav-bar">
+      <div class="centered-links">
+        <a href="work.html">WORK</a>
+        <a href="about.html">ABOUT</a>
+        <a href="contact.html">CONTACT ME</a>
+      </div>
+    </div>
+
     <div class="header">
       <h1>News App Project</h1>
-    </div>
-    <div class="nav-bar">
-      <a href="../work.html">Work</a>
-      <a href="../about.html">About</a>
-      <a href="../contact.html">Contact Me</a>
     </div>
   </body>
 </html>
