--- a/pages/work.html
+++ b/pages/work.html
@@ -7,14 +7,12 @@
     <title>Leah Woodhead</title>
   </head>
   <body>
-    <div class="header">
-      <h1>Welcome</h1>
-    </div>
-
     <div class="nav-bar">
-      <a href="work.html">Work</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact Me</a>
+      <div class="centered-links">
+        <a href="work.html">WORK</a>
+        <a href="about.html">ABOUT</a>
+        <a href="contact.html">CONTACT ME</a>
+      </div>
     </div>
 
     <div class="main">
@@ -37,7 +35,7 @@
         <h2>Project 1</h2>
         <p>
           Here is the first project I worked on using front-end tools.
-          <br />Click <a href="projects/website.html">here</a> to find out more!
+          <br />Click <a href="./website.html">here</a> to find out more!
         </p>
         <div class="img">
           <img
@@ -51,7 +49,7 @@
         <h2>Project 2</h2>
         <p>
           Here is a back-end project I worked on!
-          <a href="./projects/nc-news.html">here</a> to find out more
+          <a href="./nc-news.html">here</a> to find out more
         </p>
         <div class="img">
           <img
