homepage made responsive to the browser

--- a/pages/website.html
+++ b/pages/website.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="header">
-      <h1>News App Project</h1>
+      <h1>Website Project</h1>
     </div>
   </body>
 </html>
