--- a/pages/work.html
+++ b/pages/work.html
@@ -17,18 +17,18 @@
 
     <div class="main">
       <div class="block">
-        <h2>Hello! I'm Leah.</h2>
-        <p>
-          I am a trainee software developer!<br />
-          Here you can look at some of the things I am working on.<br />
-          Enjoy!
-        </p>
-        <div class="img">
-          <img
-            src="../images/me.jpg"
-            alt="Picture of Leah"
-            style="height: 40px; width: 40px"
-          />
+        <div class="left">
+          <h2>Hello! I'm Leah.</h2>
+          <p>
+            I am a trainee software developer!<br />
+            Here you can look at some of the things I am working on.<br />
+            Enjoy!
+          </p>
+        </div>
+        <div class="right">
+          <div class="img">
+            <img src="../images/me.jpg" alt="Picture of Leah" class="rounded" />
+          </div>
         </div>
       </div>
       <div class="block">
