styling for entry page and updated nav bar

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,26 +11,29 @@
       <div class="centered-links">
         <a href="work.html">WORK</a>
         <a href="about.html">ABOUT</a>
-        <a href="contact.html">CONTACT ME</a>
+        <a href="contact.html">CONTACT</a>
       </div>
     </div>
 
     <div class="header">
       <h1>Contact Me</h1>
     </div>
-
-    <form>
-      <label for="name">Name: </label><br />
-      <input type="text" id="name" /><br />
-      <label for="email">Email: </label><br />
-      <input type="text" id="email" /><br />
-      <label for="message">Message: </label><br />
-      <input type="text" id="message" /><br />
-      <input type="submit" value="submit" />
-    </form>
+      <div class="form"> 
+        <form>
+          <label for="name">Name: </label><br />
+          <input type="text" id="name" /><br />
+          <label for="email">Email: </label><br />
+          <input type="text" id="email" /><br />
+          <label for="message">Message: </label><br />
+          <input type="text" id="message" /><br />
+          <input type="submit" value="submit" />
+        </form>
+      </div>
+     
 
     <div class="footer">
-      <h2>Footer</h2>
+      <a href="https://www.linkedin.com/in/leah-woodhead/">LinkedIn</a>
+      <a href="https://github.com/leahjwoodhead">Github</a>
     </div>
   </body>
 </html>
