--- a/pages/website.html
+++ b/pages/website.html
@@ -11,12 +11,17 @@
       <div class="centered-links">
         <a href="work.html">WORK</a>
         <a href="about.html">ABOUT</a>
-        <a href="contact.html">CONTACT ME</a>
+        <a href="contact.html">CONTACT</a>
       </div>
     </div>
 
     <div class="header">
       <h1>Website Project</h1>
+    </div>
+
+    <div class="footer">
+      <a href="https://www.linkedin.com/in/leah-woodhead/">LinkedIn</a>
+      <a href="https://github.com/leahjwoodhead">Github</a>
     </div>
   </body>
 </html>
