--- a/pages/work.html
+++ b/pages/work.html
@@ -7,11 +7,12 @@
     <title>Leah Woodhead</title>
   </head>
   <body>
+  
     <div class="nav-bar">
       <div class="centered-links">
         <a href="work.html">WORK</a>
         <a href="about.html">ABOUT</a>
-        <a href="contact.html">CONTACT ME</a>
+        <a href="contact.html" id="contact">CONTACT</a>
       </div>
     </div>
 
@@ -62,7 +63,8 @@
     </div>
 
     <div class="footer">
-      <h2>Footer</h2>
+      <a href="https://www.linkedin.com/in/leah-woodhead/">LinkedIn</a>
+      <a href="https://github.com/leahjwoodhead">Github</a>
     </div>
   </body>
 </html>
