--- a/pages/about.html
+++ b/pages/about.html
@@ -7,31 +7,42 @@
     <title>Portfolio</title>
   </head>
   <body>
-
     <div class="nav-bar">
       <div class="centered-links">
         <a href="work.html">WORK</a>
         <a href="about.html">ABOUT</a>
-        <a href="contact.html">CONTACT ME</a>
+        <a href="contact.html">CONTACT</a>
       </div>
     </div>
 
-      <div class="header">
-          <h1>About Me</I></h1>
-      </div>
-   
     <div class="main">
       <div class="block">
-        <h2>About Me</h2>
-        <p>Hello! I am Leah. I graduated from Durham University with a degree in Philosophy, but decided to retrain in Software Development following my graduation. After dabbling in Python, HTML and CSS through various online resources, I thought the best way to learn would be through a coding bootcamp. I enrolled with Northcoders - the best decision I have made!I am currently half-way through the course, having completed the Javascript Fundamentals and Back-end block. </p>
+        <div class="left"><h2>About Me</h2></div>
+        <div class="right">
+          <p>
+            Hello! I am Leah. I graduated from Durham University with a degree
+            in Philosophy, but decided to retrain in Software Development
+            following my graduation. After dabbling in Python, HTML and CSS
+            through various online resources, I thought the best way to learn
+            would be through a coding bootcamp. I enrolled with Northcoders -
+            the best decision I have made!I am currently half-way through the
+            course, having completed the Javascript Fundamentals and Back-end
+            block.
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="block">
-      <p>Outside of coding, I love to pass the time with various hobbies and projects. Primarily, Netflix! However, I also love cooking, going for walks and trying out a range of creative activities.</p>
+      <div class="block">
+        <p>
+          Outside of coding, I love to pass the time with various hobbies and
+          projects. Primarily, Netflix! However, I also love cooking, going for
+          walks and trying out a range of creative activities.
+        </p>
+      </div>
     </div>
 
     <div class="footer">
-      <h2>Footer</h2>
+      <a href="https://www.linkedin.com/in/leah-woodhead/">LinkedIn</a>
+      <a href="https://github.com/leahjwoodhead">Github</a>
     </div>
   </body>
 </html>
