--- a/pages/index.html
+++ b/pages/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="../index.css" />
+    <link rel="stylesheet" href="../entry-page.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leah Woodhead</title>
   </head>
   <body>
-    <div class="header">
-      <h1>My Portfolio Website</h1>
+    <div class="wrapper">
+      <div class="header">
+        <h1>My Portfolio Website</h1>
+      </div>
+      <div class="enter-site">
+        <a href="work.html">Enter Site</a>
     </div>
-    <div class="enter-site">
-      <a href="work.html">Enter Site</a>
     </div>
   </body>
 </html>
