--- a/pages/work.html
+++ b/pages/work.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leah Woodhead</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
   </head>
   <body>
   
@@ -17,13 +19,15 @@
     </div>
 
     <div class="main">
-      <div class="block">
+
+      <div class="section">
         <div class="left">
           <h2>Hello! I'm Leah.</h2>
           <p>
-            I am a trainee software developer!<br />
-            Here you can look at some of the things I am working on.<br />
-            Enjoy!
+            I am a recent Philosophy Graduate-turned Software Developer based in Leeds! <br>
+
+            I am currently enrolled with Northcoders, receiving an extensive full-stack training  .
+
           </p>
         </div>
         <div class="right">
@@ -32,7 +36,8 @@
           </div>
         </div>
       </div>
-      <div class="block">
+
+      <div class="section-two">
         <h2>Project 1</h2>
         <p>
           Here is the first project I worked on using front-end tools.
@@ -46,7 +51,7 @@
           />
         </div>
       </div>
-      <div class="block">
+      <div class="section-three">
         <h2>Project 2</h2>
         <p>
           Here is a back-end project I worked on!
@@ -63,8 +68,9 @@
     </div>
 
     <div class="footer">
-      <a href="https://www.linkedin.com/in/leah-woodhead/">LinkedIn</a>
-      <a href="https://github.com/leahjwoodhead">Github</a>
+      <a href="https://www.linkedin.com/in/leah-woodhead/">LINKEDIN</a>
+      <a href="https://github.com/leahjwoodhead">GITHUB</a>
+      <a href="https://twitter.com/leahjwoodhead">TWITTER</a>
     </div>
   </body>
 </html>
